Hotfix para permitir buscar sinónimos y acepciones aunque se esté bajo HTTPs

--- a/public/src/app/biblia/templates/escenario-detalle.component.html
+++ b/public/src/app/biblia/templates/escenario-detalle.component.html
@@ -1,4 +1,5 @@
 ﻿<confirmacion-guardado [oConfirm]="confirmacionGuardado"></confirmacion-guardado>
+<ayuda-diccionarios></ayuda-diccionarios>
 <div class="well" *ngIf="elemento != undefined">
   <div class="panel panel-primary">
     <div class="panel-heading">
