--- a/public/src/app/proyectos/templates/gestor-colaboraciones.component.html
+++ b/public/src/app/proyectos/templates/gestor-colaboraciones.component.html
@@ -23,8 +23,8 @@
         <div class="row mgn-top-1">
             <div class="col-md-8">
                 <label for="listaColaboradores">Lista de colaboradores asociados</label>
-                <div class="list-group" *ngIf="gestorColaboraciones.colaboraciones != undefined && gestorColaboraciones.colaboraciones.length > 0" id="listaColaboradores">
-                    <div class="list-group-item" *ngFor="let colaboracion of gestorColaboraciones.colaboraciones">
+                <div class="list-group" *ngIf="gestorColaboraciones.proyecto.colaboradores != undefined && gestorColaboraciones.proyecto.colaboradores.length > 0" id="listaColaboradores">
+                    <div class="list-group-item" *ngFor="let colaboracion of gestorColaboraciones.proyecto.colaboradores">
                       <div class="row">
                         <div class="col-md-12">
                           {{colaboracion.email}} - {{colaboracion.fecha}}
@@ -34,7 +34,7 @@
                       <div class="row mgn-top-1">
                         <div class="col-md-3">
                           <label for="permisos">Permisos del colaborador</label>
-                          <select name="permisos" id="permisos" class="form-control" [(ngModel)]="colaboracion.permisos" (change)="gestorColaboraciones.actualizar(colaboracion)">
+                          <select name="permisos" id="permisos" class="form-control" [(ngModel)]="colaboracion.permisos">
                             <option *ngFor="let permiso of tiposPermiso" value="{{permiso.id}}">{{mostrarNombrePermiso(permiso)}}</option>
                           </select>
                         </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="col-md-4"></div>
         </div>
-        <div class="alert alert-info" *ngIf="gestorColaboraciones.colaboraciones == undefined || gestorColaboraciones.colaboraciones.length == 0">
+        <div class="alert alert-info" *ngIf="gestorColaboraciones.proyecto.colaboradores == undefined || gestorColaboraciones.proyecto.colaboradores.length == 0">
             <i class="glyphicon glyphicon-info"></i> No se han encontrado colaboradores asociados al proyecto.
         </div>
     </div>
