Se termina con la historia de usuario de mostrar registros a usuarios colaboradores en sólo lectura.

--- a/public/src/app/biblia/templates/biblia.component.html
+++ b/public/src/app/biblia/templates/biblia.component.html
@@ -5,8 +5,8 @@
   <div class="panel-body">
     <p>En esta sección tienes acceso a los diferentes elementos que componen la biblia literaria en GuionMaker.</p>
     <ul class="list-group">
-      <li class="list-group-item"><i class="glyphicon glyphicon-list"></i> <a routerLink="personajes">Listado de personajes</a></li>
-      <li class="list-group-item"><i class="glyphicon glyphicon-list"></i> <a routerLink="escenarios">Listado de escenarios</a></li>
+      <li class="list-group-item"><i class="glyphicon glyphicon-user"></i> <a routerLink="personajes">Listado de personajes</a></li>
+      <li class="list-group-item"><i class="glyphicon glyphicon-picture"></i> <a routerLink="escenarios">Listado de escenarios</a></li>
     </ul>
   </div>
 </div>
