--- a/public/src/app/utils/templates/lista-generica.component.html
+++ b/public/src/app/utils/templates/lista-generica.component.html
@@ -6,11 +6,11 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-md-6">
-          <button class="btn btn-primary" (click)="onNuevoElemento()"><i class="glyphicon glyphicon-plus"></i> Añadir {{listaGenerica.entidad}}</button>
+          <button class="btn btn-primary" (click)="onNuevoElemento()" *ngIf="usuarioLogeadoAutor"><i class="glyphicon glyphicon-plus"></i> Añadir {{listaGenerica.entidad}}</button>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
           <div class="list-group mgn-top-1" *ngIf="elementos != undefined && elementos.length > 0">
             <div class="list-group-item " *ngFor="let elemento of elementos">
               <div class="row">
@@ -20,7 +20,7 @@
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#mdlBorrado" (click)="setElementoAEliminar(elemento)"><i class="glyphicon glyphicon-trash"></i></button>
+                  <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#mdlBorrado" (click)="setElementoAEliminar(elemento)" [disabled]="!usuarioLogeadoAutor"><i class="glyphicon glyphicon-trash"></i></button>
                   <button type="button" class="btn btn-default btn-sm" [routerLink]="[elemento._id]"><i class="glyphicon glyphicon-edit"></i></button>
                 </div>
               </div>
