--- a/public/src/app/templates/login.component.html
+++ b/public/src/app/templates/login.component.html
@@ -24,7 +24,7 @@
             </td>
           </tr>
         </table>
-        <p>¿Aun no tienes cuenta? Deberías probar <a href="/registro">a crearte una.</a></p>
+        <p>¿Aun no tienes cuenta? Deberías probar <a routerLink="/registro">a crearte una.</a></p>
       </form>
     </div>
   </div>
