Cambio en la validación de plantillas y listado de las mismas + inicio de hook post update en esquema mongoose.

--- a/public/src/app/utils/templates/lista-generica.component.html
+++ b/public/src/app/utils/templates/lista-generica.component.html
@@ -15,7 +15,7 @@
             <div class="list-group-item " *ngFor="let elemento of elementos">
               <div class="row">
                 <div class="col-md-12">
-                  {{elemento.nombre}}
+                  {{elemento.nombre}} <i class="glyphicon glyphicon-asterisk" *ngIf="listaGenerica.propiedadDestacado != '' ? elemento[listaGenerica.propiedadDestacado] : ''"></i>
                 </div>
               </div>
               <div class="row">
