--- a/public/src/app/proyectos/templates/gestor-colaboraciones.component.html
+++ b/public/src/app/proyectos/templates/gestor-colaboraciones.component.html
@@ -27,8 +27,8 @@
                     <div class="list-group-item" *ngFor="let colaboracion of gestorColaboraciones.proyecto.colaboradores">
                       <div class="row">
                         <div class="col-md-12">
-                          {{colaboracion.email}} - {{colaboracion.fecha}}
                           <a role="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#mdlBorrado" (click)="gestorColaboraciones.prepararAEliminar(colaboracion)"><i class="glyphicon glyphicon-trash"></i></a>
+                          {{colaboracion.email}} - {{colaboracion.fecha | date: 'dd/MM/yyyy HH:mm'}}
                         </div>
                       </div>
                       <div class="row mgn-top-1">
