Errata en la etiqueta de la imagen de escenario

--- a/public/src/app/biblia/templates/escenario-detalle.component.html
+++ b/public/src/app/biblia/templates/escenario-detalle.component.html
@@ -27,7 +27,7 @@
         </tr>
         <tr>
           <td>
-            <label for="imagen">Imagen del personaje</label>
+            <label for="imagen">Imagen del escenario</label>
             <gestor-subida id="imagen" [fichero]="fichero"></gestor-subida>
           </td>
         </tr>
