A falta de enviar mail, incluye el componente de Angular para la recuperación de contraseñas.

--- a/public/src/app/templates/login.component.html
+++ b/public/src/app/templates/login.component.html
@@ -25,6 +25,7 @@
           </tr>
         </table>
         <p>¿Aun no tienes cuenta? Deberías probar <a routerLink="/registro">a crearte una.</a></p>
+        <p>¿No recuerdas tu contraseña? <a routerLink="/recuperacion">Recupérala</a> para poder acceder a la aplicación</p>
       </form>
     </div>
   </div>
